fix: fixing semantic release setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,13 @@ sentencepiece = "^0.1.99"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_variable = [
+    "causal_tracer/__init__.py:__version__",
+    "pyproject.toml:version"
+]
+branch = "main"
+upload_to_pypi = true
+upload_to_release = true
+build_command = "pip install poetry && poetry build"
