--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,10 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.semantic_release]
-version_variable = [
+version_variables = [
     "causal_tracer/__init__.py:__version__",
     "pyproject.toml:version"
 ]
 branch = "main"
-upload_to_pypi = true
-upload_to_release = true
+upload_to_vcs_elease = true
 build_command = "pip install poetry && poetry build"
