--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,11 +20,12 @@ jobs:
         run: poetry run mypy .
       - name: pytest
         run: poetry run pytest --cov=./ --cov-report=xml
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           fail_ci_if_error: true
+          slug: ${{ github.repository }}
       - name: build
         run: poetry build
 
